kubernetes/services/pgadmin/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-nginx
  namespace: hpc-services
spec:
  selector:
    matchLabels:
      run: pgadmin-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: pgadmin-nginx
    spec:
      containers:
        - name: pgadmin-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: pgadmin-nginx-conf
          configMap:
            name: pgadmin-nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-nginx
  namespace: hpc-services
  labels:
    run: pgadmin-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: pgadmin-nginx
