kubernetes/services/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin
  namespace: hpc-services
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /pgadmin4;
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin4
            pathType: Prefix
            backend:
              serviceName: pgadmin-nginx
              servicePort: 80
